Trying to fix item alignment on navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,7 @@ body {
   height: 50px;
 
   ul {
-    width: 50%;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -39,7 +39,7 @@ body {
   }
 
   button {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     color: white;
     margin-left: 5px;
